--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -264,6 +264,9 @@
 \chapter{Appendix: design and construction notes}
 \input{doctricks}
 
+\newpage
+\chapter{Appendix: coding style}
+\input{codestyle}
 
 
 \newpage
