--- a/esl_vectorops.tex
+++ b/esl_vectorops.tex
@@ -22,6 +22,7 @@ Table~\ref{tbl:vectorops_api} lists the functions in the
 \ccode{esl\_vec\_\{D,F,I\}Add()}         & Add vec2 to vec1.\\
 \ccode{esl\_vec\_\{D,F,I\}AddScaled()}   & Scale vec2 and add it to vec1.\\
 \ccode{esl\_vec\_\{D,F,I\}Copy()}        & Set vec1 to be same as vec2. \\
+\ccode{esl\_vec\_\{D,F,I\}Compare()}     & Compare vec1 to vec2 for equality. \\
 \ccode{esl\_vec\_\{D,F,I\}Swap()}        & Swap vec1 and vec2. \\
 \ccode{esl\_vec\_\{D,F,I\}Dot()}         & Return dot product of two vectors.\\
 \ccode{esl\_vec\_\{D,F,I\}Max()}         & Return value of maximum element in vector.\\
